--- a/css/titlecursor.css
+++ b/css/titlecursor.css
@@ -26,3 +26,11 @@
     50% { opacity: 0; }
     100% { opacity: 1; }
 }
+/**
+ * hide cursor on mobile
+ */
+@media only screen and (max-width:600px) {
+    .typed-cursor{
+        display: none;
+    }
+}
